--- a/css/pages/Acceuil.css
+++ b/css/pages/Acceuil.css
@@ -2,8 +2,187 @@
 /*Coleurs de base du site*/
 /*Charte d'écriture*/
 /*Font type*/
-html,
-body {
-  font-family: "Roboto", sans-serif; }
+div#fonctionnement {
+  text-align: center;
+  background-color: white;
+  padding: 20px; }
+  div#fonctionnement span {
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+    display: block;
+    margin-bottom: 20px; }
+  div#fonctionnement ol {
+    width: 100%;
+    float: left;
+    list-style: none;
+    background-color: white; }
+    div#fonctionnement ol li {
+      padding: 18px;
+      border-radius: 25px;
+      background-color: #f6f6f6;
+      display: inline-block;
+      margin-bottom: 10px;
+      position: relative;
+      margin-right: 150px;
+      box-shadow: 2px 2px 10px 2px #e9e9e9; }
+      @media (max-width: 991.98px) {
+        div#fonctionnement ol li {
+          width: 100%;
+          margin-bottom: 16px; } }
+      div#fonctionnement ol li span.number {
+        background-color: #9356dc;
+        border-radius: 25px;
+        font-size: small;
+        color: white;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        left: -18px;
+        position: absolute; }
+        @media (max-width: 991.98px) {
+          div#fonctionnement ol li span.number {
+            left: 0; } }
+      div#fonctionnement ol li:hover {
+        background-color: #afafaf; }
+        div#fonctionnement ol li:hover i.fas {
+          color: #9356dc; }
+      div#fonctionnement ol li i.fas {
+        padding-left: 10px;
+        padding-right: 10px; }
+      div#fonctionnement ol li a {
+        color: #000;
+        text-decoration: none; }
+
+div#explorer {
+  text-align: center;
+  padding: 20px; }
+  div#explorer span {
+    font-weight: bold;
+    font-size: 25px; }
+  div#explorer p {
+    font-size: 25px;
+    font-weight: 300; }
+
+.localisation form {
+  background: #eaeaea;
+  padding: 20px;
+  position: relative; }
+  .localisation form .fa-map-marker-alt {
+    position: absolute;
+    left: 42%;
+    top: 21px;
+    font-size: 22px; }
+    @media (max-width: 991.98px) {
+      .localisation form .fa-map-marker-alt {
+        left: 0px; } }
+.localisation #recherche {
+  width: 100%;
+  height: 30px;
+  border: none;
+  background: none;
+  text-align: center;
+  font-size: 24px; }
+  .localisation #recherche:focus {
+    outline: none; }
+  .localisation #recherche::placeholder {
+    color: #000; }
+
+div#restaurant {
+  display: block;
+  float: left;
+  width: 100%;
+  background: #f6f6f6; }
+  @media (max-width: 991.98px) {
+    div#restaurant {
+      padding: 25px; } }
+  div#restaurant .item {
+    display: block;
+    float: left;
+    width: 23%;
+    position: relative;
+    background: #fff;
+    margin: 1%;
+    border-radius: 25px;
+    box-shadow: 2px 2px 10px 2px #e9e9e9; }
+    @media (max-width: 991.98px) {
+      div#restaurant .item {
+        float: none;
+        width: 100%;
+        margin: 0;
+        margin-bottom: 15px; } }
+    div#restaurant .item .nouveau {
+      background: #99e2d0;
+      color: #008766;
+      position: absolute;
+      padding: 2px 10px;
+      border-radius: 3px;
+      font-size: 15px;
+      font-weight: bold;
+      top: 20px;
+      right: 17px; }
+      div#restaurant .item .nouveau span {
+        font-size: 14px;
+        font-weight: 400; }
+    div#restaurant .item a img {
+      width: 100%;
+      display: flex;
+      float: left;
+      display: inline;
+      height: 170px;
+      border-radius: 25px 25px 0px 0px; }
+      @media (max-width: 991.98px) {
+        div#restaurant .item a img {
+          height: auto; } }
+    div#restaurant .item .name {
+      float: left; }
+      div#restaurant .item .name span {
+        font-size: larger;
+        font-weight: 400; }
+    div#restaurant .item .heart {
+      text-align: right; }
+    div#restaurant .item p {
+      font-size: large;
+      font-weight: bold; }
+    div#restaurant .item i {
+      cursor: pointer;
+      top: 20px;
+      position: relative; }
+
+.heart-block {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding: 15px 10px; }
+  .heart-block .like {
+    position: relative;
+    margin-right: 22px;
+    margin-top: 4px;
+    float: left; }
+    .heart-block .like i {
+      color: #9d9d9d;
+      font-size: 24px;
+      left: 50%; }
+    .heart-block .like .hover-icon {
+      left: 0;
+      opacity: 0;
+      position: absolute; }
+      .heart-block .like .hover-icon:hover {
+        background: linear-gradient(#ff79da, #9356dc);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        opacity: 1;
+        z-index: 999; }
+    .heart-block .like:hover {
+      cursor: pointer;
+      overflow: hidden;
+      opacity: 1; }
+    .heart-block .like .default-icon:hover {
+      opacity: 0; }
+
+.heart-block .like .hover-icon:hover, .heart-block .like:hover {
+  transition: 1s 0s ease; }
 
 /*# sourceMappingURL=Acceuil.css.map */
