--- a/sass/pages/Acceuil.scss
+++ b/sass/pages/Acceuil.scss
@@ -1,5 +1,225 @@
 @import "../utils/Variables.scss";
-html,
-body {
-    font-family: $text-font;
+div#fonctionnement {
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+    span {
+        font-weight: bold;
+        font-size: 25px;
+        text-align: center;
+        display: block;
+        margin-bottom: 20px;
+    }
+    ol {
+        width: 100%;
+        float: left;
+        list-style: none;
+        background-color: white;
+        li {
+            padding: 18px;
+            border-radius: 25px;
+            background-color: #f6f6f6;
+            display: inline-block;
+            margin-bottom: 10px;
+            position: relative;
+            margin-right: 150px;
+            box-shadow: 2px 2px 10px 2px #e9e9e9;
+            @include medium-devices {
+                width: 100%;
+                margin-bottom: 16px;
+            }
+            span.number {
+                background-color: $color-primary;
+                border-radius: 25px;
+                font-size: small;
+                color: white;
+                width: 30px;
+                height: 30px;
+                line-height: 30px;
+                left: -18px;
+                position: absolute;
+                @include medium-devices {
+                    left: 0;
+                }
+            }
+            &:hover {
+                background-color: #afafaf;
+                i.fas {
+                    color: $color-primary;
+                }
+            }
+            i.fas {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            a {
+                color: #000;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+div#explorer {
+    text-align: center;
+    padding: 20px;
+    span {
+        font-weight: bold;
+        font-size: 25px;
+    }
+    p {
+        font-size: 25px;
+        font-weight: 300;
+    }
+}
+
+.localisation {
+    form {
+        background: #eaeaea;
+        padding: 20px;
+        position: relative;
+        .fa-map-marker-alt {
+            position: absolute;
+            left: 42%;
+            top: 21px;
+            font-size: 22px;
+            @include medium-devices {
+                left: 0px;
+            }
+        }
+    }
+    #recherche {
+        width: 100%;
+        height: 30px;
+        border: none;
+        background: none;
+        text-align: center;
+        font-size: 24px;
+        &:focus {
+            outline: none;
+        }
+        &::placeholder {
+            color: #000;
+        }
+    }
+}
+
+div#restaurant {
+    display: block;
+    float: left;
+    width: 100%;
+    background: #f6f6f6;
+    @include medium-devices {
+        padding: 25px;
+    }
+    .item {
+        display: block;
+        float: left;
+        width: 23%;
+        position: relative;
+        background: #fff;
+        margin: 1%;
+        border-radius: 25px;
+        box-shadow: 2px 2px 10px 2px #e9e9e9;
+        @include medium-devices {
+            float: none;
+            width: 100%;
+            margin: 0;
+            margin-bottom: 15px;
+        }
+        .nouveau {
+            background: #99e2d0;
+            color: #008766;
+            position: absolute;
+            padding: 2px 10px;
+            border-radius: 3px;
+            font-size: 15px;
+            font-weight: bold;
+            top: 20px;
+            right: 17px;
+            span {
+                font-size: 14px;
+                font-weight: 400;
+            }
+        }
+        a {
+            img {
+                width: 100%;
+                display: flex;
+                float: left;
+                display: inline;
+                height: 170px;
+                border-radius: 25px 25px 0px 0px;
+                @include medium-devices {
+                    height: auto;
+                }
+            }
+        }
+        .name {
+            float: left;
+            span {
+                font-size: larger;
+                font-weight: 400;
+            }
+        }
+        .heart {
+            text-align: right;
+        }
+        p {
+            font-size: large;
+            font-weight: bold;
+        }
+        i {
+            cursor: pointer;
+            top: 20px;
+            position: relative;
+        }
+    }
+}
+
+.heart-block {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    padding: 15px 10px;
+    .like {
+        position: relative;
+        margin-right: 22px;
+        margin-top: 4px;
+        float: left;
+        i {
+            color: #9d9d9d;
+            font-size: 24px;
+            left: 50%;
+        }
+        .hover-icon {
+            left: 0;
+            opacity: 0;
+            position: absolute;
+            &:hover {
+                background: linear-gradient(#ff79da, #9356dc);
+                -webkit-text-fill-color: transparent;
+                -webkit-background-clip: text;
+                opacity: 1;
+                z-index: 999;
+                @extend %likeanimated;
+            }
+        }
+        &:hover {
+            cursor: pointer;
+            overflow: hidden;
+            opacity: 1;
+            @extend %likeanimated;
+        }
+        .default-icon:hover {
+            opacity: 0;
+            // @extend %likeanimated;
+        }
+    }
+}
+
+%likeanimated {
+    transition: 1s 0s ease;
 }
