--- a/sass/pages/menu.scss
+++ b/sass/pages/menu.scss
@@ -1,124 +1,185 @@
-            div#Bloc-page {
-                background-color: #f6f6f6;
+body {
+    background-color: #fff;
+    color: #333;
+    font-family: Roboto, sans-serif;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    margin: 0;
+    text-align: left;
+    overflow-x: hidden;
+}
+
+div#Bloc-page {
+    background-color: #f6f6f6;
+    position: relative;
+    z-index: 99;
+    a {
+        text-decoration: none;
+    }
+}
+
+header div#titre-principal {
+    text-align: center;
+    padding: 15px;
+    background: white;
+    box-shadow: 0 1px 4px #000;
+    border-bottom: 2px solid #f4f4f4;
+    padding: 20px;
+    a {
+        text-decoration: none;
+        color: black;
+        width: 50px;
+        font-size: 20px;
+        position: absolute;
+        top: 30px;
+        left: -8px;
+    }
+    img {
+        height: auto;
+        max-width: 100%;
+        width: 250px;
+    }
+}
+
+.image-entete {
+    img {
+        width: 100%;
+        height: 500px;
+        display: flex;
+        margin: auto;
+        text-align: center;
+    }
+    h1 {
+        width: 100%;
+        font-style: italic;
+        font-weight: 900;
+        text-align: center;
+        background-color: #fff;
+        border-radius: 25px 25px 25px 25px;
+        position: relative;
+        top: -38px;
+        padding: 20px;
+        font-size: 25px;
+    }
+    .like {
+        position: relative;
+        bottom: 88px;
+        left: 90%;
+    }
+    i {
+        color: #9d9d9d;
+        font-size: 24px;
+        left: 50%;
+    }
+    .hover-icon {
+        left: 0px;
+        opacity: 0;
+        position: absolute;
+        &:hover {
+            background: linear-gradient(#ff79da, #9356dc);
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+            opacity: 1;
+            z-index: 999;
+            @extend %likeanimated;
+        }
+    }
+    &:hover {
+        cursor: pointer;
+        overflow: hidden;
+        opacity: 1;
+        @extend %likeanimated;
+    }
+    .default-icon:hover {
+        opacity: 0;
+        @extend %likeanimated;
+    }
+}
+
+%likeanimated {
+    transition: 1s 0s ease;
+}
+
+.block-item {
+    margin-bottom: 15px;
+    padding: 20px;
+    .title {
+        &::after {
+            display: block;
+            height: 2px;
+            width: 70px;
+            background: #99E2D0;
+            content: " ";
+        }
+    }
+    ul {
+        li {
+            background: #fff;
+            margin-top: 15px;
+            padding: 15px;
+            border-radius: 15px;
+            box-shadow: 0px 8px 0px -2px #e7e7e7;
+            display: flex;
+            overflow: hidden;
+            cursor: pointer;
+            i {
+                color: #fff;
+                font-size: 27px;
+                transform: Rotate(180deg);
+                transition-duration: 1s;
             }
-            
-            body {
-                background-color: #fff;
-                color: #333;
-                font-family: Roboto, sans-serif;
-                font-size: 0.875rem;
-                line-height: 1.5;
-                margin: 0;
-                text-align: left;
-                overflow-x: hidden;
-            }
-            
-            header div#titre-principal {
-                text-align: center;
-                padding: 15px;
-                background: white;
-                box-shadow: 0 1px 4px #000;
-                border-bottom: 2px solid #f4f4f4;
-                padding: 20px;
-                a i.fas.fa-arrow-left {
-                    color: black;
-                    width: 50px;
-                    font-size: xx-large;
-                    position: relative;
-                    right: 444px;
-                    bottom: 20px;
-                }
-                img {
-                    height: auto;
-                    max-width: 100%;
-                }
-            }
-            
-            .image-entete {
-                img {
-                    width: 100%;
-                    height: 500px;
-                    display: flex;
-                    margin: auto;
-                    text-align: center;
-                }
-                h1 {
-                    width: 100%;
-                    font-style: italic;
-                    font-weight: 900;
-                    text-align: center;
-                    background-color: #fff;
-                    border-radius: 25px 25px 25px 25px;
-                    position: relative;
-                    top: -38px;
-                    padding: 20px;
-                    font-size: 25px;
-                }
-                i {
-                    position: relative;
-                    bottom: 83px;
-                    left: 95%;
-                    .far {
-                        cursor: pointer;
-                        top: 20px;
-                        position: relative;
-                        &:hover {
-                            color: red;
-                        }
+            &:hover {
+                .checkbox {
+                    margin-right: -1rem;
+                    i {
+                        transform: Rotate(0deg);
                     }
-                    .fas {
-                        cursor: pointer;
-                        top: 20px;
-                        position: relative;
-                        &:hover {
-                            color: red;
-                        }
-                    }
                 }
             }
-            
-            .block-item {
-                margin-bottom: 15px;
-                padding: 20px;
-                .title {
-                    &::after {
-                        display: block;
-                        height: 2px;
-                        width: 70px;
-                        background: #99E2D0;
-                        content: " ";
-                    }
-                }
-                ul {
-                    li {
-                        background: #fff;
-                        margin-top: 15px;
-                        padding: 15px;
-                        border-radius: 15px;
-                        box-shadow: 0px 8px 0px -2px #e7e7e7;
-                        h2 {
-                            margin-bottom: 10px;
-                            font-weight: bold;
-                        }
-                        span {
-                            font-weight: 400;
-                            &.price {
-                                float: right;
-                                font-weight: bold;
-                            }
-                        }
-                    }
-                }
+            .item-header {
+                flex: 25;
+                justify-content: flex-end;
+                align-items: flex-end;
             }
-            
-            .Commander {
-                background: linear-gradient(27deg, #9356DC, #FF79DA 100%);
-                text-decoration: none;
-                padding: 16px;
-                border-radius: 25px;
-                color: white;
-                width: max-content;
-                position: relative;
-                margin: auto;
+            .item-price {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .checkbox {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-right: -50px;
+                background-color: #99e2d0;
+                margin: -1rem -5rem -1rem 1rem;
+                width: 4rem;
+                transition-duration: .5s;
+            }
+            h2 {
                 margin-bottom: 10px;
+                font-weight: bold;
             }
+            span {
+                font-weight: 400;
+                &.price {
+                    float: right;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+}
+
+.Commander {
+    cursor: pointer;
+    background: linear-gradient(27deg, #9356DC, #FF79DA 100%);
+    text-decoration: none;
+    padding: 16px;
+    border-radius: 25px;
+    color: white;
+    width: max-content;
+    position: relative;
+    margin: auto;
+    margin-bottom: 10px;
+}
