--- a/sass/pages/Acceuil.scss
+++ b/sass/pages/Acceuil.scss
@@ -123,8 +123,8 @@ div#restaurant {
         box-shadow: 2px 2px 10px 2px #e9e9e9;
         @include medium-devices {
             float: none;
-            width: 100%;
-            margin: 0;
+            width: 70%;
+            margin: auto;
             margin-bottom: 15px;
         }
         .nouveau {
